# handlers/create_thing.go
@@ -8,6 +8,8 @@ import (
 	"github.com/pizzahutdigital/phdmw/phdlog"
 	pb "github.com/pizzahutdigital/yum-rest/protobufs"
 	"go.uber.org/zap"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
 )
 
 // CreateThing Creates a Thing
@@ -17,9 +19,25 @@ func (rs *RestServiceServer) CreateThing(ctx context.Context, req *pb.CreateThin
 	cid := grpcmw.HandlerStart(ctx, "CreateThing")
 	phdlog.Info(logMessage, cid, zap.String("Request", req.String()))
 
+	if req.GetThing().GetId() == failID {
+		return nil, status.Errorf(codes.InvalidArgument, "Thing `%s` already exists", req.GetThing().GetId())
+	}
+
+	if req.GetThing().GetName() == "Todd" {
+		return nil, status.Errorf(codes.InvalidArgument, "Cannot name Thing %s", req.GetThing().GetName())
+	}
+
+	if req.GetThing().GetId() == "uuid" {
+		return &pb.CreateThingRes{
+			Status:      http.StatusCreated,
+			Description: http.StatusText(http.StatusOK),
+			ThingID:     "09963975-06b8-4e59-aa61-3514b5dd22b3",
+		}, nil
+	}
+
 	// Return Thing
 	return &pb.CreateThingRes{
-		Status:      http.StatusOK,
+		Status:      http.StatusCreated,
 		Description: http.StatusText(http.StatusOK),
 		ThingID:     req.GetThing().GetId(),
 	}, nil
