# handlers/update_thing.go
@@ -8,6 +8,8 @@ import (
 	"github.com/pizzahutdigital/phdmw/phdlog"
 	pb "github.com/pizzahutdigital/yum-rest/protobufs"
 	"go.uber.org/zap"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
 )
 
 // UpdateThing Updates a Thing
@@ -16,6 +18,17 @@ func (rs *RestServiceServer) UpdateThing(ctx context.Context, req *pb.UpdateThin
 	// Set handler name for phdlog
 	cid := grpcmw.HandlerStart(ctx, "UpdateThing")
 	phdlog.Info(logMessage, cid, zap.String("Request", req.String()))
+
+	if req.GetThing().GetId() == failID {
+		return nil, status.Errorf(codes.NotFound, "Thing `%s` does not exist", req.GetThing().GetId())
+	}
+
+	if req.GetThing().GetId() == "upsert" {
+		return &pb.UpdateThingRes{
+			Status:      http.StatusCreated,
+			Description: "Updated thing " + req.GetThing().GetId() + ", we would want a new field for new id?",
+		}, nil
+	}
 
 	// Return Thing
 	return &pb.UpdateThingRes{
